2001-04-04  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/shimbun.el (shimbun-mua-use-entire-index): New method.
	(shimbun-attributes): Removed use-entire-index.
	(shimbun-open): Call `shimbun-mua-use-entire-index' to set
	use-entire-index slot.

	* shimbun/sb-airs.el (shimbun-airs-use-entire-index): Abolish.

	* shimbun/sb-bbdb-ml.el (shimbun-bbdb-ml-use-entire-index): Ditto.

	* shimbun/sb-fml.el (shimbun-get-headers): Stop when
	`shimbun-search-id' returns non-nil.

	* shimbun/shimbun.el (shimbun): Added `mua' slot.
	(shimbun-mua): New class.
	(shimbun-mua-search-id): New method.
	(shimbun-search-id): New function.
	(shimbun-mime-encode-string): Fixed problem when string is "" or nil.
	(shimbun-open): Added optional `MUA' argument.

	* shimbun/sb-mhonarc.el (shimbun-make-contents):
	Process content as text/html.

	* shimbun/shimbun.el (shimbun): Added `x-face-alist' slot.
	(shimbun-x-face-alist): Eliminated.
	(shimbun-x-face): New variable.
	(shimbun-attributes): Added `x-face-alist'.
	(shimbun-open): Set `x-face-alist'.
	(shimbun-open-group): Follow changes above.

	* shimbun/sb-text.el (shimbun-fill-column,
	shimbun-kinsoku-bol-list, shimbun-kinsoku-eol-list,
	shimbun-fill-line, shimbun-shallow-rendering): Moved from shimbun.el.

	* shimbun/sb-asahi.el (shimbun-asahi-x-face-alist): New variable.

	* shimbun/sb-zdnet.el (shimbun-zdnet-x-face-alist): Ditto.

	* shimbun/sb-wired.el (shimbun-wired-x-face-alist): Ditto.

	* shimbun/sb-cnet.el (shimbun-cnet-x-face-alist): Ditto.

2001-04-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-w3m-retrieve): Add 'cs(coding-system)' option.
	(w3m-retrieve): Ditto.
	(w3m-exec): Ditto.
	(w3m-goto-url): Ditto.
	(w3m-decode-buffer): Ditto. If 'cs' specify, decoding use it.
	(w3m-mode-map): Add w3m-redisplay-with-coding-system() at "C".
	(w3m-mode): Change doc string.
	(w3m-redisplay-with-coding-system): New function.

2001-04-04  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
